--- a/jans-auth-server/pom.xml
+++ b/jans-auth-server/pom.xml
@@ -152,7 +152,7 @@
 			<dependency>
 				<groupId>io.jans</groupId>
 				<artifactId>jans-auth-model</artifactId>
-				<version>${project.version}</version>
+				<version>1.0.3-SNAPSHOT</version>
 				<type>test-jar</type>
 			</dependency>
 			<dependency>
