--- a/jans-auth-server/server/pom.xml
+++ b/jans-auth-server/server/pom.xml
@@ -591,7 +591,7 @@
 		<dependency>
 			<groupId>io.jans</groupId>
 			<artifactId>jans-auth-model</artifactId>
-			<version>${project.version}</version>
+            <version>1.0.3-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -1107,7 +1107,7 @@
 				<dependency>
 					<groupId>io.jans</groupId>
 					<artifactId>jans-auth-model</artifactId>
-					<version>${project.version}</version>
+                    <version>1.0.3-SNAPSHOT</version>
 					<type>test-jar</type>
 					<scope>test</scope>
 				</dependency>
