--- a/jans-config-api/server/pom.xml
+++ b/jans-config-api/server/pom.xml
@@ -550,22 +550,22 @@
 				<dependency>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-webapp</artifactId>
-					<scope>test</scope>
+					<!-- <scope>test</scope> -->
 				</dependency>
 				<dependency>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-deploy</artifactId>
-					<scope>test</scope>
+					<!-- <scope>test</scope> -->
 				</dependency>
 				<dependency>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-annotations</artifactId>
-					<scope>test</scope>
+					<!-- <scope>test</scope> -->
 				</dependency>
 				<dependency>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-plus</artifactId>
-					<scope>test</scope>
+				<!-- 	<scope>test</scope> -->
 				</dependency>
 				<dependency>
 					<groupId>com.nimbusds</groupId>
