--- a/docker-jans-persistence-loader/Makefile
+++ b/docker-jans-persistence-loader/Makefile
@@ -1,4 +1,4 @@
-CN_VERSION?=1.0.6-SNAPSHOT
+CN_VERSION?=1.0.6-test-release-SNAPSHOT
 IMAGE_NAME=janssenproject/persistence-loader
 DEV_VERSION?=$(shell echo ${CN_VERSION} | cut -d '-' -f 1)_dev
 
