--- a/agama/pom.xml
+++ b/agama/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.jans</groupId>
 	<artifactId>agama</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.6-test-release-SNAPSHOT</version>
+	<version>1.0.6-test-release-2-SNAPSHOT</version>
 	<name>agama parent</name>
 
     <prerequisites>
