--- a/docker-jans-auth-server/Dockerfile
+++ b/docker-jans-auth-server/Dockerfile
@@ -55,7 +55,7 @@ RUN /opt/jython/bin/pip uninstall -y pip
 # Auth server
 # ===========
 
-ENV CN_VERSION=1.0.6-test-release-SNAPSHOT
+ENV CN_VERSION=1.0.6-test-release-2-SNAPSHOT
 ENV CN_BUILD_DATE='2022-12-01 12:38'
 ENV CN_SOURCE_URL=https://jenkins.jans.io/maven/io/jans/jans-auth-server/${CN_VERSION}/jans-auth-server-${CN_VERSION}.war
 
