--- a/docker-jans-fido2/Dockerfile
+++ b/docker-jans-fido2/Dockerfile
@@ -34,7 +34,7 @@ EXPOSE 8080
 # FIDO2
 # =====
 
-ENV CN_VERSION=1.0.6-test-release-SNAPSHOT
+ENV CN_VERSION=1.0.6-test-release-2-SNAPSHOT
 ENV CN_BUILD_DATE='2022-12-01 12:39'
 ENV CN_SOURCE_URL=https://jenkins.jans.io/maven/io/jans/jans-fido2-server/${CN_VERSION}/jans-fido2-server-${CN_VERSION}.war
 
