--- a/jans-auth-server/agama/engine/pom.xml
+++ b/jans-auth-server/agama/engine/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>io.jans</groupId>
         <artifactId>jans-auth-server-parent</artifactId>
-        <version>1.0.6-test-release-SNAPSHOT</version>
+        <version>1.0.6-test-release-2-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
