--- a/jans-auth-server/pom.xml
+++ b/jans-auth-server/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.jans</groupId>
 	<artifactId>jans-auth-server-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.6-test-release-SNAPSHOT</version>
+	<version>1.0.6-test-release-2-SNAPSHOT</version>
 	<name>Jans authentication server parent</name>
     <distributionManagement>
 	  <repository>
