--- a/jans-config-api/plugins/sample/helloworld/pom.xml
+++ b/jans-config-api/plugins/sample/helloworld/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.spl</groupId>
 	<artifactId>${plugin.id}</artifactId>
-	<version>1.0.6-test-release-SNAPSHOT</version>
+	<version>1.0.6-test-release-2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>helloworld</name>
 
