--- a/jans-config-api/plugins/user-mgt-plugin/pom.xml
+++ b/jans-config-api/plugins/user-mgt-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>plugins</artifactId>
 		<groupId>io.jans.jans-config-api.plugins</groupId>
-		<version>1.0.6-test-release-SNAPSHOT</version>
+		<version>1.0.6-test-release-2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>user-mgt-plugin</artifactId>
