--- a/jans-config-api/shared/pom.xml
+++ b/jans-config-api/shared/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.jans</groupId>
 		<artifactId>jans-config-api-parent</artifactId>
-		<version>1.0.6-test-release-SNAPSHOT</version>
+		<version>1.0.6-test-release-2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
