--- a/jans-fido2/pom.xml
+++ b/jans-fido2/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.jans</groupId>
 	<artifactId>jans-fido2-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.6-test-release-SNAPSHOT</version>
+	<version>1.0.6-test-release-2-SNAPSHOT</version>
 	<name>Fido2 API</name>
 
     <distributionManagement>
