--- a/jans-notify/model/pom.xml
+++ b/jans-notify/model/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<artifactId>jans-notify-parent</artifactId>
 		<groupId>io.jans</groupId>
-		<version>1.0.6-test-release-SNAPSHOT</version>
+		<version>1.0.6-test-release-2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
