--- a/jans-notify/pom.xml
+++ b/jans-notify/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>io.jans</groupId>
 	<artifactId>jans-notify-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.6-test-release-SNAPSHOT</version>
+	<version>1.0.6-test-release-2-SNAPSHOT</version>
 	<name>notify</name>
 	<url>http://ox.gluu.org</url>
 
