--- a/jans-scim/client/pom.xml
+++ b/jans-scim/client/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>io.jans</groupId>
 		<artifactId>jans-scim</artifactId>
-		<version>1.0.6-test-release-SNAPSHOT</version>
+		<version>1.0.6-test-release-2-SNAPSHOT</version>
 	</parent>
 
     <build>
