--- a/jans-auth-server/agama/engine/pom.xml
+++ b/jans-auth-server/agama/engine/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>io.jans</groupId>
         <artifactId>jans-auth-server-parent</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6.mysql-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
@@ -72,12 +72,12 @@
         <dependency>
             <groupId>io.jans</groupId>
             <artifactId>agama-model</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.jans</groupId>
             <artifactId>agama-transpiler</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.6-SNAPSHOT</version>
         </dependency>
         
         <!-- SERVLET -->
