--- a/jans-auth-server/pom.xml
+++ b/jans-auth-server/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.jans</groupId>
 	<artifactId>jans-auth-server-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.6.mysql-SNAPSHOT</version>
 	<name>Jans authentication server parent</name>
     <distributionManagement>
 	  <repository>
@@ -19,10 +19,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.min-version>3.3.9</maven.min-version>
 
-		<jans-core.version>${project.version}</jans-core.version>
-		<jans-eleven.version>${project.version}</jans-eleven.version>
-		<jans-notify.version>${project.version}</jans-notify.version>
-		<jans-fido2.version>${project.version}</jans-fido2.version>
+		<jans-core.version>1.0.6-SNAPSHOT</jans-core.version>
+		<jans-eleven.version>1.0.6-SNAPSHOT</jans-eleven.version>
+		<jans-notify.version>1.0.6-SNAPSHOT</jans-notify.version>
+		<jans-fido2.version>1.0.6-SNAPSHOT</jans-fido2.version>
 
 		<jakarta.jms.api.version>2.0.3</jakarta.jms.api.version>
 		<activemq.version>5.15.14</activemq.version>
@@ -117,7 +117,7 @@
             <dependency>
                 <groupId>io.jans</groupId>
                 <artifactId>jans-bom</artifactId>
-                <version>${project.version}</version>
+                <version>1.0.6-SNAPSHOT</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -167,12 +167,12 @@
 			<dependency>
 				<groupId>io.jans</groupId>
 				<artifactId>jans-fido2-server</artifactId>
-				<version>${project.version}</version>
+				<version>1.0.6-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>io.jans</groupId>
 				<artifactId>jans-fido2-client</artifactId>
-				<version>${project.version}</version>
+				<version>1.0.6-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>io.jans</groupId>
